# miniapm

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.admin  README.md  captain-definition.admin  docker-compose.yml  mise.toml
.github/workflows/: ci.yml  docker.yml
crates/mini-apm/: Cargo.toml
crates/mini-apm-admin/: Cargo.toml
crates/mini-apm-admin/src/: auth.rs  cookies.rs  lib.rs  main.rs  server.rs  template.rs
crates/mini-apm-admin/src/api/: auth.rs  health.rs  ingest.rs
crates/mini-apm-admin/src/web/: api_key.rs  auth.rs  auth_middleware.rs  dashboard.rs  deploys.rs  errors.rs  mod.rs  performance.rs  project_context.rs  projects.rs  security_headers.rs  traces.rs
crates/mini-apm-cli/: Cargo.toml
crates/mini-apm-cli/src/: main.rs
crates/mini-apm/src/: config.rs  db.rs  lib.rs  server.rs
crates/mini-apm/src/api/: auth.rs  health.rs  ingest.rs  mod.rs  rate_limit.rs
crates/mini-apm/src/jobs/: retention.rs  rollup.rs
crates/mini-apm/src/models/: api_key.rs  deploy.rs  project.rs  rollup.rs  user.rs
crates/miniapm/: Cargo.toml
gem/: .gitignore  CHANGELOG.md
gem/.github/workflows/: ci.yml
gem/lib/miniapm/exporters/: errors.rb
gem/spec/: examples.txt
gem/spec/unit/middleware/: error_handler_spec.rb
gem/spec/unit/transport/: batch_sender_spec.rb
landing/: README.md  index.html
src/: config.rs  db.rs  lib.rs  main.rs  server.rs
src/api/: auth.rs  ingest.rs  mod.rs
src/jobs/: retention.rs
src/mcp/: server.rs
src/models/: deploy.rs  error.rs  mod.rs  request.rs  settings.rs  span.rs  user.rs
src/simulator/: mod.rs  routes.rs  runner.rs  traces.rs
src/web/: api_key.rs  auth.rs  dashboard.rs  deploys.rs  errors.rs  mod.rs  performance.rs  project_context.rs  projects.rs  traces.rs
static/: style.css
templates/: dashboard.html  layout.html
templates/deploys/: index.html
templates/errors/: index.html  show.html
templates/performance/: index.html
templates/traces/: index.html
