[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "MIT"
authors = ["Chris Hasinski <krzysztof.hasinski@gmail.com>"]
repository = "https://github.com/miniapm/miniapm"
homepage = "https://github.com/miniapm/miniapm"
keywords = ["apm", "monitoring", "tracing", "performance", "rails"]
categories = ["development-tools", "web-programming"]

[workspace.dependencies]
# Internal crates
mini-apm = { path = "crates/mini-apm", version = "0.0.0" }
mini-apm-admin = { path = "crates/mini-apm-admin", version = "0.0.0" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = "0.7"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Templates
askama = "0.12"
askama_axum = "0.4"

# CLI
clap = { version = "4", features = ["derive"] }

# HTTP client - using rustls to avoid OpenSSL dependency
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Utils
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
base64 = "0.21"
urlencoding = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"

# Authentication
argon2 = "0.5"
tower-cookies = "0.10"
axum-extra = { version = "0.9", features = ["cookie"] }
time = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
