[package]
name = "mini-apm-admin"
edition.workspace = true
version.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "miniapm-admin"
path = "src/main.rs"

[dependencies]
mini-apm = { workspace = true }
rama = { workspace = true }
askama = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
