[package]
name = "mini-apm-cli"
edition.workspace = true
version.workspace = true
publish = false

[[bin]]
name = "miniapm-cli"
path = "src/main.rs"

[dependencies]
mini-apm = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
