[package]
name = "mini-apm"
edition.workspace = true
version.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "mini-apm"
path = "src/bin/server/main.rs"

[dependencies]
tokio = { workspace = true }
rama = { workspace = true }
rusqlite = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
argon2 = { workspace = true }
time = { workspace = true }